<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_acercade"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.dev.victor.spaper.AcercadeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            >
            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/app_name"
                android:layout_gravity="center_horizontal"
                android:textColor="#5a5a5a"
                style="@style/Base.TextAppearance.AppCompat.Large" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/slogan"
                android:text="@string/slogan"
                android:layout_gravity="center_horizontal"
                />

            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/text_margin"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                />

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/appversion"
                />

            <TextView
                android:id="@+id/copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/copyright"
                android:gravity="center" />

            <TextView
                android:id="@+id/decripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/descripcion"
                android:gravity="center"
                />

        </LinearLayout>

        <View
            android:id="@+id/dividerView5"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ffa8a8a8"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
             />

        <TextView
            android:id="@+id/devabout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/devabout"
            android:layout_gravity="center_horizontal"
            android:textColor="#5a5a5a"
            style="@style/Base.TextAppearance.AppCompat.Large" />

        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/about_card_margin"
            android:layout_marginRight="@dimen/about_card_margin"

            card_view:elevation="2dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardUseCompatPadding="true"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/devv"
                    android:id="@+id/devbanner" />

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:id="@+id/imgDeveloper"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginBottom="55dp"
                    android:layout_alignBottom="@+id/linearLayout"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_below="@+id/devbanner"
                    android:layout_toRightOf="@+id/imgDeveloper"
                    android:layout_toEndOf="@+id/imgDeveloper"
                    android:id="@+id/linearLayout">
                    <TextView
                        android:id="@+id/nombredev2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="8dp"
                        android:text="@string/devname"
                        />
                    <TextView
                        android:id="@+id/devtitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/devtitle"
                        android:layout_marginLeft="8dp" />
                    <TextView
                        android:id="@+id/cesigntitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/design"
                        android:layout_marginLeft="8dp" />
                    <TextView
                        android:id="@+id/devemail2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/devemail"
                        android:layout_marginLeft="8dp"
                        android:layout_marginBottom="8dp" />
                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/dividerView6"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ffa8a8a8"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="23dp" />

        <TextView
            android:id="@+id/agradecimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/agradecimiento"
            android:layout_gravity="center_horizontal"
            android:textColor="#5a5a5a"
            style="@style/Base.TextAppearance.AppCompat.Large" />



        <androidx.cardview.widget.CardView
            android:layout_height="100dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/about_card_margin"
            android:layout_marginRight="@dimen/about_card_margin"
            android:layout_marginBottom="10dp"
            card_view:elevation="4dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardUseCompatPadding="true"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:scaleType="centerCrop"

                    android:id="@+id/free_p"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/free_p"
                    android:layout_toEndOf="@+id/free_p"
                    android:layout_marginLeft="28dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="10dp"

                    android:text="@string/freepick"
                    android:layout_marginBottom="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/freepickdescrip"
                    android:id="@+id/freepikdescrip"
                    android:layout_below="@+id/textView"
                    android:layout_alignLeft="@+id/textView"
                    android:layout_alignStart="@+id/textView" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_height="100dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/about_card_margin"
            android:layout_marginRight="@dimen/about_card_margin"
            android:layout_marginBottom="10dp"
            card_view:elevation="4dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardUseCompatPadding="true"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >
                <ImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:scaleType="centerCrop"

                    android:id="@+id/flickrimg"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/flickrtitle"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/flickrimg"
                    android:layout_toEndOf="@+id/flickrimg"
                    android:layout_marginLeft="28dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="10dp"

                    android:text="@string/flickr"
                    android:layout_marginBottom="4dp"
                   />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/flickrtnks"
                    android:id="@+id/flickrdescrip"
                    android:layout_below="@+id/flickrtitle"
                    android:layout_alignLeft="@+id/flickrtitle"
                    android:layout_alignStart="@+id/flickrtitle"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/material_grey_300"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/copyright"
                android:id="@+id/textView2"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:textSize="12sp"
                android:layout_marginBottom="4dp"
                android:textColor="#a4a4a4" />
        </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>
