<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.dev.victor.spaper.FullscreenDescargas">



    <include layout="@layout/content_fullscreen_descargas" />

    <com.dev.victor.spaper.util.Fab
        android:id="@+id/fab3"
        style="@style/FabMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:src="@mipmap/ic_more_vert_white_24dp"
        app:backgroundTint="@color/colorAccent"
        app:borderWidth="0dp"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/overlay3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"/>

    <!-- Circular reveal container for the sheet -->
    <io.codetail.widget.RevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom"
        android:orientation="vertical">

        <!-- Sheet that contains your items -->

        <androidx.cardview.widget.CardView
            android:id="@+id/fab_sheet3"
            android:visibility="gone"
            style="@style/Widget.MaterialSheetFab.Sheet">

            <!-- Sheet items -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <!-- Recording -->
                <com.balysv.materialripple.MaterialRippleLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="@color/colorAccent"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">
                    <TextView
                        android:id="@+id/fab_sheet_item_wallpaper3"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableLeft="@mipmap/ic_now_wallpaper_grey600_24dp"
                        android:drawableStart="@mipmap/ic_now_wallpaper_grey600_24dp"
                        android:text="@string/wallpaper" />
                </com.balysv.materialripple.MaterialRippleLayout>

                <!-- Reminder -->
                <TextView
                    android:id="@+id/fab_sheet_item_compartir"
                    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                    android:drawableLeft="@drawable/ic_share_variant_grey600_24dp"
                    android:drawableStart="@drawable/ic_share_variant_grey600_24dp"
                    android:text="@string/share" />


                <!-- Photo -->
                <com.balysv.materialripple.MaterialRippleLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="@color/colorAccent"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">
                    <TextView
                        android:id="@+id/fab_sheet_item_set_as"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableLeft="@mipmap/ic_screen_lock_landscape_grey600_24dp"
                        android:drawableStart="@mipmap/ic_screen_lock_landscape_grey600_24dp"
                        android:text="@string/establece_como" />
                </com.balysv.materialripple.MaterialRippleLayout>

                <!-- Note -->
                <LinearLayout
                    android:id="@+id/fila_fab_expand3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent">


                    <TextView
                        android:id="@+id/fab_sheet_item_back3"
                        android:textColor="@color/text_white_87"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableLeft="@mipmap/ic_arrow_back_grey600_24dp"
                        android:drawableStart="@mipmap/ic_arrow_back_grey600_24dp"
                        android:text="@string/back" />
                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </io.codetail.widget.RevealLinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
